Fixed some bugs

--- a/DDos_Prediction.ipynb
+++ b/DDos_Prediction.ipynb
@@ -44,13 +44,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "d68KJ-lSBXr8",
-        "colab": {}
+        "outputId": "cd501a0b-4cc6-45cb-a470-aa44839bf43c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        }
       },
       "source": [
         "#Import Liabraries\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import csv\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns;\n",
         "import pandas.util.testing as tm\n",
@@ -62,7 +65,17 @@
         "from keras.utils import np_utils"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n",
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -110,22 +123,26 @@
       "metadata": {
         "id": "J4Ldj3SJ9YlM",
         "colab_type": "code",
-        "outputId": "2fedb4e4-7ede-4d89-f88c-e6c82e9155a2",
+        "outputId": "e48ae7f0-8409-48ad-9c3c-c202171ad9de",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 124
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -136,7 +153,7 @@
       "metadata": {
         "id": "mUs4P4pq9YlM",
         "colab_type": "code",
-        "outputId": "567d1dc8-ca1c-4d70-d485-fddea9d261ad",
+        "outputId": "d32a2987-fef8-4144-a030-abefaaf9d5a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
@@ -147,7 +164,7 @@
         "data_attack = pd.read_csv(path)\n",
         "data_attack.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,7 +398,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 6
         }
       ]
     },
@@ -390,7 +407,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nV46tkd5v8z4",
-        "outputId": "d3970a25-2ede-4e47-e454-359aac679e15",
+        "outputId": "b67d00d8-9334-49a3-80b8-29c334cb3273",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
@@ -401,7 +418,7 @@
         "data_normal = pd.read_csv(path)\n",
         "data_normal.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +652,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 7
         }
       ]
     },
@@ -669,7 +686,7 @@
       "metadata": {
         "id": "rKDzH4uw9YlM",
         "colab_type": "code",
-        "outputId": "e484723c-d5e3-4d00-a938-f2cbdaada0a9",
+        "outputId": "d480de9f-5234-49dc-a29a-b3415a454d6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -682,7 +699,7 @@
         "features.remove(\"class\")\n",
         "print(features)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,51 +734,26 @@
       "metadata": {
         "id": "jBLiQxgwTuxQ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 243
-        },
-        "outputId": "89a9c6e6-083a-423f-9945-1f6f4a5c6e0e"
+        "colab": {}
       },
       "source": [
         "#Standardise Data to scale Numerical features\n",
         "scalar = StandardScaler(copy=True, with_mean=True, with_std=True)\n",
-        "X = scalar.fit_transform(X)\n",
-        "print(X)"
+        "X = scalar.fit_transform(X)"
       ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[-0.71492272  0.03557411 -0.70966061 ... -0.15058853 -0.15877423\n",
-            "  -0.04142802]\n",
-            " [-0.93020798  0.03557411 -0.93313351 ... -0.15058853 -0.22335811\n",
-            "  -0.04136753]\n",
-            " [-0.93020798  0.03557411 -0.93313351 ... -0.15058853 -0.22335811\n",
-            "  -0.04141056]\n",
-            " ...\n",
-            " [ 1.09583282  0.03557411  1.09576514 ... -0.15058853 -0.23504827\n",
-            "  -0.04097687]\n",
-            " [-0.93020798  0.03557411 -0.93313351 ... -0.15058853 -0.1597367\n",
-            "  -0.04127572]\n",
-            " [ 1.09583282  0.03557411  1.09576514 ... -0.15058853 -0.23504827\n",
-            "  -0.04118707]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lY60B-aI9Ymw",
         "colab_type": "code",
+        "outputId": "15cd2b61-d59f-40e6-b01a-863972231e4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e2ea490d-9df8-4e60-ae67-06465d1f2f47"
+        }
       },
       "source": [
         "# Transform Categorical values with Label Encoder\n",
@@ -769,7 +761,7 @@
         "Y = labelencoder.fit_transform(Y)\n",
         "print(Y)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,18 +787,18 @@
       "metadata": {
         "id": "_yJLj1MXLxEI",
         "colab_type": "code",
+        "outputId": "f11cdfdf-7369-4f73-f840-40519c081fa5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f11cdfdf-7369-4f73-f840-40519c081fa5"
+        }
       },
       "source": [
         "#Split data into train and test\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size = 0.2)\n",
         "print(Y_train)   "
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,16 +856,16 @@
       "metadata": {
         "id": "-Oa4Rz0CiGrc",
         "colab_type": "code",
+        "outputId": "cf8334de-c7a0-4dba-9995-b6a1dcaa081f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 903
-        },
-        "outputId": "cf8334de-c7a0-4dba-9995-b6a1dcaa081f"
+        }
       },
       "source": [
         "Learn = model.fit(X_train, Y_train, validation_split = 0.2, epochs = 25)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,11 +941,11 @@
       "metadata": {
         "id": "2X8C0_3z440k",
         "colab_type": "code",
+        "outputId": "5df6bcbc-57e5-4b58-edaf-c0110b79f5ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "5df6bcbc-57e5-4b58-edaf-c0110b79f5ae"
+        }
       },
       "source": [
         "# Training and Validation Accuracy Values\n",
@@ -965,7 +957,7 @@
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 68,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -987,11 +979,11 @@
       "metadata": {
         "id": "g9AJb_wqEjho",
         "colab_type": "code",
+        "outputId": "2fbc47e1-cb30-47aa-bd55-c45531f75b1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "2fbc47e1-cb30-47aa-bd55-c45531f75b1a"
+        }
       },
       "source": [
         "# Training and Validation Loss Values\n",
@@ -1001,10 +993,9 @@
         "plt.ylabel('Loss')\n",
         "plt.xlabel('Epoch')\n",
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
-        "plt.savefig('ANN Model loss.png')\n",
         "plt.show()"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1026,16 +1017,16 @@
       "metadata": {
         "id": "K6Nc2iKIVZCk",
         "colab_type": "code",
+        "outputId": "57921be1-3036-4286-f3fb-6903483b33bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "57921be1-3036-4286-f3fb-6903483b33bb"
+        }
       },
       "source": [
         "predict = model.predict(X_test, verbose=1)"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,19 +1071,19 @@
       "metadata": {
         "id": "txuLbHSIWSSo",
         "colab_type": "code",
+        "outputId": "71ca02ee-69ea-4af8-8cc1-4dd3d834a671",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 267
-        },
-        "outputId": "71ca02ee-69ea-4af8-8cc1-4dd3d834a671"
+        }
       },
       "source": [
-        "# Heatmap for TP.TN.FP.FN Values\n",
+        "# Heatmap for Confusion Matrix\n",
         "to_heat_map =[[tn,fp],[fn,tp]]\n",
         "to_heat_map = pd.DataFrame(to_heat_map, index = [\"Attack\",\"Normal\"],columns = [\"Attack\",\"Normal\"])\n",
         "ax = sns.heatmap(to_heat_map,annot=True, fmt=\"d\")"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1112,48 +1103,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yKCVxpttWWlo",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 185
-        },
-        "outputId": "b91a31b2-2437-4f19-8a27-f1fc8b729da7"
-      },
-      "source": [
-        "figure = ax.get_figure()"
-      ],
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-61-a807fd1abe91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfigure\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_figure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'Figure' object is not callable"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "CBCc_nhbWe3U",
         "colab_type": "code",
+        "outputId": "92e2dae6-36bf-4939-9101-4744e6e35854",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 312
-        },
-        "outputId": "92e2dae6-36bf-4939-9101-4744e6e35854"
+        }
       },
       "source": [
         "#Model Architecture\n",
         "plot_model(model, show_shapes=True, show_layer_names=True)"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1175,11 +1137,11 @@
       "metadata": {
         "id": "QxKHSOAxWzIM",
         "colab_type": "code",
+        "outputId": "2419a749-6911-477b-f59e-d87b9b588904",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "2419a749-6911-477b-f59e-d87b9b588904"
+        }
       },
       "source": [
         "# Accuracy\n",
@@ -1187,7 +1149,7 @@
         "print(\"%s: %.2f%%\" % (model.metrics_names[0], scores[0]*100))\n",
         "print(\"%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
